add full screen for cell in notebook

--- a/Python/Basic/Data Types/Encapsulation - @property – Getter, Setter, Deleter.ipynb
+++ b/Python/Basic/Data Types/Encapsulation - @property – Getter, Setter, Deleter.ipynb
@@ -4,12 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"text-align: center;\"> CREATE CLASS WITHOUT PARENTHESES </p> "
+    "<p style=\"text-align: center;\"> SHOW NOTEBOOK CELL TO 100% OF SCREEN </p> "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"text-align: center;\"> CREATE CLASS WITHOUT PARENTHESES </p> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
