Coding and Decoding Morse Code

--- a/Python/Notebooks/Code and Decode Morse Code.ipynb
+++ b/Python/Notebooks/Code and Decode Morse Code.ipynb
@@ -1,12 +1,48 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Configuración Global del NOTEBOOK</center> "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Función que retorna un dictionario con los carácteres de código morse </center> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dictionary representing the morse code chart\n",
     "def morse_dictionary() -> dict:\n",
     "    \n",
     "    MORSE_CODE_DICTIONARY = {'A':'.-', 'B':'-...', 'C':'-.-.',\n",
@@ -30,8 +66,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Función que obtiene el contenido de una key</center> "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +82,22 @@
     "    \n",
     "    MORSE_CODE_DICTIONARY = morse_dictionary()\n",
     "    \n",
-    "    return  MORSE_CODE_DICTIONARY[key.upper()] if(key.upper() in MORSE_CODE_DICTIONARY) else key + \" -> Value  doesn't found\"\n",
-    "    \n",
-    "\n",
+    "    return  MORSE_CODE_DICTIONARY[key.upper()] if(key.upper() in MORSE_CODE_DICTIONARY) else key + \" -> Value  doesn't found\"    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Función que obtiene una key usando el valor de la key</center> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_key_from_value(value: str) -> str:\n",
     "    \n",
     "    MORSE_CODE_DICTIONARY = morse_dictionary()\n",
@@ -53,13 +109,19 @@
     "        # obtengo el indice del valor en la lista para obtener la key \n",
     "        return key_list[val_list.index(value)]\n",
     "    else:\n",
-    "        return \"key doesn't found\"  \n",
-    "    "
+    "        return \"key doesn't found\"  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Función que convierte texto normal en Código Morse</center> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +133,22 @@
     "        morse_text += get_value_from_key(i) + ' '\n",
     "\n",
     "    # elimina el ultimo caracter en blanco del texto\n",
-    "    return morse_text[:-1]\n",
-    "\n",
+    "    return morse_text[:-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Función que convierte Código Morse en texto normal</center> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def decode_morse_code_to_text(text: str) -> str:\n",
     "\n",
     "    normal_text = ''\n",
@@ -81,8 +157,22 @@
     "        normal_text += get_key_from_value(i)\n",
     "\n",
     "    # elimina el ultimo caracter en blanco del texto\n",
-    "    return normal_text\n",
-    "\n",
+    "    return normal_text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Función que Códifica Morse o Decódifica Morse</center> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def proccess_text(text: str, encrypt: bool) -> str:\n",
     "        \n",
     "    if(encrypt):\n",
@@ -92,52 +182,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Códificando Texto a Morse</center> "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'. .-.. / -- --- -. --- / . ... - .- / . -. / . .-.. / -... .- -. .- -. .- .-.. / -.-. --- -. / . .-.. / --.-- .- -. -.. ..- / - ..- .-. ..- .-. ..-'"
+       "'. .-.. / -- --- -. --- / _.._ ...-- / . ... - .- / . -. / . .-.. / -... .- -. .- -. .- .-.. / -.-. --- -. / . .-.. / --.-- .- -. -.. ..- / - ..- .-. ..- .-. ..-'"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = proccess_text('el mono esta en el bananal con el ñandu tururu', True)\n",
-    "a"
+    "texto_en_morse = proccess_text('el mono *3 esta en el bananal con el ñandu tururu', True)\n",
+    "texto_en_morse"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Decódificando Morse a Texto</center> "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'EL MONO ESTA EN EL BANANAL CON EL ÑANDU TURURU'"
+       "'EL MONO *3 ESTA EN EL BANANAL CON EL ÑANDU TURURU'"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "proccess_text(a, False)"
+    "proccess_text(texto_en_morse, False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
