adicionada imagen ilustrativa de los decoradores y de las funciones map, reduce y filter

--- a/Python/Notebooks/Excepciones Raise y Except, Clase con Métodos de Instancia, de Clase, Abstractos y Estáticos, Decoradores.ipynb
+++ b/Python/Notebooks/Excepciones Raise y Except, Clase con Métodos de Instancia, de Clase, Abstractos y Estáticos, Decoradores.ipynb
@@ -891,6 +891,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![image](decoradores.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <center> Decoradores - Map - Filter - Reduce </center>"
    ]
   },
