--- a/Python/Notebooks/Untitled.ipynb
+++ b/Python/Notebooks/Untitled.ipynb
@@ -140,6 +140,213 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'when' from 'overloading' (C:\\Users\\QiDimMak\\anaconda3\\lib\\site-packages\\overloading.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-e71b89bb5c4d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0moverloading\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mwhen\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'when' from 'overloading' (C:\\Users\\QiDimMak\\anaconda3\\lib\\site-packages\\overloading.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from overloading import when"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def funcion_decoradora(funcion_entrada):\n",
+    "    \n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        \n",
+    "        return funcion_entrada(*args, **kwargs)\n",
+    "    \n",
+    "    return wrapper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ejemplo_args(*argumentos):\n",
+    "    \n",
+    "    return sum(argumentos)\n",
+    "\n",
+    "\n",
+    "def ejemplo_kw_args(**keywordarguments):\n",
+    "    total = 0\n",
+    "    \n",
+    "    for llave, valor in keywordarguments.items():\n",
+    "        \n",
+    "        print('El valor de La {llave} es {valor}.'.format(llave=llave, valor=valor))\n",
+    "        print(f'El valor de La {llave} es {valor}')\n",
+    "        total += valor\n",
+    "        \n",
+    "    return total        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor de La w es 3.\n",
+      "El valor de La w es 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ejemplo_kw_args(w=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello     '"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"{0:10}\".format(\"Hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 1\n",
+    "\n",
+    "def subir(y):\n",
+    "    \n",
+    "    y +=1\n",
+    "    \n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subir(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 100, 200]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def doblar_valores(numeros):\n",
+    "    for i,n in enumerate(numeros):\n",
+    "        numeros[i] *= 2\n",
+    "\n",
+    "ns = [10,50,100]\n",
+    "doblar_valores(ns)\n",
+    "print(ns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def doblar_valor(numero):\n",
+    "    return numero * 2\n",
+    "\n",
+    "n = 10\n",
+    "doblar_valor(n)\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
