--- a/Python/Notebooks/Faker - Mock - Pytest - Pytest-cov.ipynb
+++ b/Python/Notebooks/Faker - Mock - Pytest - Pytest-cov.ipynb
@@ -746,7 +746,7 @@
     "import pandas as pd\n",
     "\n",
     "# leeer los datos\n",
-    "data = pd.read_csv(\"comandos_debug.csv\", sep=\";\")\n",
+    "data = pd.read_csv(\"comandos_debug.csv\", sep=\",\")\n",
     "\n",
     "# Crear el DataFrame\n",
     "df = pd.DataFrame(data)\n",
