patrones de diseno abstract factory python

--- a/Python/Notebooks/Patrones de Diseno.ipynb
+++ b/Python/Notebooks/Patrones de Diseno.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
     "class IColor(ABC):\n",
     "\n",
     "    @abstractmethod\n",
-    "    def factory_method(self):\n",
+    "    def mostrar(self):\n",
     "        \"\"\"\n",
     "        Note that the Creator may also provide some default implementation of\n",
     "        the factory method.\n",
@@ -120,21 +120,20 @@
     "\n",
     "class ColorAmarillo(IColor):\n",
     "\n",
-    "    def factory_method(self) -> Color:\n",
+    "    def mostrar(self) -> Color:\n",
     "        return \"SOY EL COLOR AMARILLO\"\n",
     "\n",
     "class ColorAzul(IColor):\n",
     "\n",
-    "    def factory_method(self) -> Color:\n",
+    "    def mostrar(self) -> Color:\n",
     "        return \"SOY EL COLOR AZUL\"\n",
     "    \n",
     "class ColorRojo(IColor):\n",
     "\n",
-    "    def factory_method(self) -> Color:\n",
+    "    def mostrar(self) -> Color:\n",
     "        return \"SOY EL COLOR ROJO\"\n",
-    "    \n",
     "\n",
-    "class Fabrica():\n",
+    "class FabricaColores:\n",
     "    \n",
     "    @staticmethod\n",
     "    def crear(color):\n",
@@ -150,12 +149,56 @@
     "            print(f\"{objects[color]().__class__} Factory de color {color} Valido\")\n",
     "            return objects[color]()\n",
     "\n",
-    "        raise AssertionError(f\"Color {color} No Valido\")"
+    "        raise AssertionError(f\"Color {color} No Valido\")\n",
+    "        \n",
+    "        \n",
+    "class IFiguras(ABC):\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def mostrar(self):\n",
+    "        \"\"\"\n",
+    "        Note that the Creator may also provide some default implementation of\n",
+    "        the factory method.\n",
+    "        \"\"\"\n",
+    "        pass\n",
+    "\n",
+    "class FiguraCircular(IFiguras):\n",
+    "\n",
+    "    def mostrar(self) -> Figura:\n",
+    "        return \"SOY EL CIRCULO\"\n",
+    "\n",
+    "class FiguraCuadrada(IFiguras):\n",
+    "\n",
+    "    def mostrar(self) -> Figura:\n",
+    "        return \"SOY EL CUADRADO\"\n",
+    "    \n",
+    "class FiguraTriangular(IFiguras):\n",
+    "\n",
+    "    def mostrar(self) -> Figura:\n",
+    "        return \"SOY EL TRIANGULO\"\n",
+    "    \n",
+    "class FabricaFiguras:\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def crear(figura):\n",
+    "        \n",
+    "        \"\"\"Factory Method\"\"\"\n",
+    "        objects = {\n",
+    "            \"Circulo\": FiguraCircular,\n",
+    "            \"Cuadro\": FiguraCuadrada,\n",
+    "            \"Triangulo\": FiguraTriangular,\n",
+    "        }        \n",
+    "        \n",
+    "        if figura in objects:\n",
+    "            print(f\"{objects[figura]().__class__} Factory de Figura {figura} Valido\")\n",
+    "            return objects[figura]()\n",
+    "\n",
+    "        raise AssertionError(f\"figura {figura} No Valido\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,14 +214,203 @@
        "'SOY EL COLOR AMARILLO'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "z = Fabrica.crear(\"Amarillo\")\n",
-    "z.factory_method()"
+    "z = FabricaColores.crear(\"Amarillo\")\n",
+    "z.mostrar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.FiguraTriangular'> Factory de Figura Triangulo Valido\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SOY EL TRIANGULO'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = FabricaFiguras.crear(\"Triangulo\")\n",
+    "z.mostrar()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> ABSTRACT FACTORY </center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class IAbstractFactory(ABC):\n",
+    "    \"Abstract Factory Interface\"\n",
+    "\n",
+    "    @staticmethod\n",
+    "    @abstractmethod\n",
+    "    def create_object(factory):\n",
+    "        \"The static Abstract factory interface method\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AbstractFactory(IAbstractFactory):\n",
+    "    \"The Abstract Factory Concrete Class\"\n",
+    "    \n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def create_factory_object(factory_type, object_type):\n",
+    "        \"Static get_factory method\"\n",
+    "        objects = { \"Colores\": {\n",
+    "            \"fabrica\":FabricaColores,\n",
+    "            \"Amarillo\": ColorAmarillo,\n",
+    "            \"Azul\": ColorAzul,\n",
+    "            \"Rojo\": ColorRojo\n",
+    "        },\n",
+    "            \"FabricaFiguras\":{\n",
+    "            \"Circulo\": FiguraCircular,\n",
+    "            \"Cuadro\": FiguraCuadrada,\n",
+    "            \"Triangulo\": FiguraTriangular\n",
+    "            }\n",
+    "        }  \n",
+    "\n",
+    "        if factory_type in objects:\n",
+    "            \n",
+    "            print(f\"{objects[factory_type]} Abstract Factory {factory_type} Valido\")\n",
+    "            #breakpoint()\n",
+    "            \n",
+    "            if object_type in objects[factory_type]:\n",
+    "\n",
+    "                #breakpoint()\n",
+    "                print(f\"{object_type.__class__} Factory {object_type} Valido\")\n",
+    "                return objects[factory_type][\"fabrica\"]().crear(object_type)\n",
+    "            raise AssertionError(f\"factory {object_type} No Valido\")\n",
+    "\n",
+    "        raise AssertionError(f\"Abstract factory {factory_type} No Valido\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fabrica': <class '__main__.FabricaColores'>, 'Amarillo': <class '__main__.ColorAmarillo'>, 'Azul': <class '__main__.ColorAzul'>, 'Rojo': <class '__main__.ColorRojo'>} Abstract Factory Colores Valido\n",
+      "<class 'str'> Factory Azul Valido\n",
+      "<class '__main__.ColorAzul'> Factory de color Azul Valido\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SOY EL COLOR AZUL'"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = AbstractFactory.create_factory_object('Colores',\"Azul\")\n",
+    "z.mostrar()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class AbstractFactory(IAbstractFactory):\n",
+    "    \"The Abstract Factory Concrete Class\"\n",
+    "    \n",
+    "        \n",
+    "    @staticmethod\n",
+    "    def create_factory_object(object_type):\n",
+    "        \"Static get_factory method\"\n",
+    "        objects = { \"Colores\": {\n",
+    "            \"fabrica\":FabricaColores,\n",
+    "            \"Amarillo\": ColorAmarillo,\n",
+    "            \"Azul\": ColorAzul,\n",
+    "            \"Rojo\": ColorRojo\n",
+    "        },\n",
+    "            \"Figuras\":{\n",
+    "            \"fabrica\":FabricaFiguras,\n",
+    "            \"Circulo\": FiguraCircular,\n",
+    "            \"Cuadro\": FiguraCuadrada,\n",
+    "            \"Triangulo\": FiguraTriangular\n",
+    "            }\n",
+    "        }  \n",
+    "\n",
+    "        object_return = [objects[x]['fabrica']() for x in objects if object_type in objects[x]]\n",
+    "        \n",
+    "        if object_return:\n",
+    "            \n",
+    "            print(f\"el Objeto {object_type} Pertenece a la Abstract Factory {object_return[0].__class__}\")\n",
+    "            \n",
+    "            return object_return[0].crear(object_type).mostrar()\n",
+    "        \n",
+    "        else:\n",
+    "            \n",
+    "            raise AssertionError(f\"factory {object_type} No Valido\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "el Objeto Circulo Pertenece a la Abstract Factory <class '__main__.FabricaFiguras'>\n",
+      "<class '__main__.FiguraCircular'> Factory de Figura Circulo Valido\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SOY EL CIRCULO'"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AbstractFactory.create_factory_object('Circulo')"
    ]
   }
  ],
