--- a/Python/Notebooks/Operaciones_y_metodos_con_Listas.ipynb
+++ b/Python/Notebooks/Operaciones_y_metodos_con_Listas.ipynb
@@ -33,7 +33,7 @@
     {
      "data": {
       "text/plain": [
-       "['<', '=', '<', '=', '=', '=', 'B', 'C', 'A', 'C']"
+       "['<', '<', '>', '<', '=', 'A', '=', 'A', 'C', 'B']"
       ]
      },
      "execution_count": 2,
@@ -1130,7 +1130,7 @@
     {
      "data": {
       "text/plain": [
-       "(2080308596608, 2080308558208, 2080309347392, 2080309347392)"
+       "(1985751357568, 1985750846592, 1985750850240, 1985750850240)"
       ]
      },
      "execution_count": 41,
@@ -1167,7 +1167,7 @@
     {
      "data": {
       "text/plain": [
-       "(2080308596608, 2080308558208, 2080308597504, 2080309347392)"
+       "(1985751357568, 1985750846592, 1985751907008, 1985750850240)"
       ]
      },
      "execution_count": 43,
@@ -1395,11 +1395,361 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> COMPREHENSION LIST</center>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i%2 == 0:\n",
+    "        print(i)\n",
+    "\n",
+    "[i for i in range(10) if i%2 == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "9\n",
+      "4\n",
+      "25\n",
+      "6\n",
+      "49\n",
+      "8\n",
+      "81\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 9, 4, 25, 6, 49, 8, 81]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i%2 == 0:\n",
+    "        print(i)\n",
+    "    else:\n",
+    "        print(i**2)\n",
+    "\n",
+    "[i if i%2 == 0 else i**2 for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[6, 8]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    if i%2 == 0 and i > 5:\n",
+    "        print(i)\n",
+    "\n",
+    "[i for i in range(10) if i%2 == 0 if i > 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "-1\n",
+      "-1\n",
+      "3\n",
+      "True\n",
+      "10\n",
+      "6\n",
+      "-1\n",
+      "True\n",
+      "9\n",
+      "20\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, -1, -1, 3, True, 10, 6, -1, True, 9, 20]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(11):\n",
+    "    if i%3 == 0:\n",
+    "        print(i)\n",
+    "    elif i%4 == 0:\n",
+    "        print(i%4 == 0)\n",
+    "    elif i%5 == 0:\n",
+    "        print(i*2)\n",
+    "    else:\n",
+    "        print(-1)\n",
+    "\n",
+    "\n",
+    "[i if i%3 ==0 else i%4 == 0 if i%4 == 0 else i*2 if i%5==0 else -1 for i in range(11)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{103: 6, 104: 6, 106: 6, 108: 4, 111: 8, 114: 6, 115: 1, 117: 5, 118: 7, 120: 9, 121: 9, 136: 4, 140: 9, 141: 10, 142: 4, 146: 6, 150: 8, 152: 5, 159: 4, 161: 2, 169: 6, 170: 3, 177: 2, 181: 7, 192: 7, 197: 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = {random.randint(100,200):random.randint(1,10) for i in range(30)}\n",
+    "numeros_ordenados = dict(sorted(numeros.items(), key=lambda x: x[0], reverse=False))\n",
+    "print(numeros_ordenados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[141]\n",
+      "[115]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([key for key, value in numeros.items() if value == max(numeros.values())])\n",
+    "print([key for key, value in numeros.items() if value == min(numeros.values())])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: 'DB', 3: 'BD', 7: '@@', 9: 'BA', 10: 'CD', 11: 'BB', 14: 'CD', 15: 'CD', 18: 'DC', 19: '@A', 20: 'AA', 21: 'AA', 24: 'BA', 25: 'CA', 26: 'C@', 28: '@C', 30: '@D', 31: 'BD', 32: '@B', 33: '@B', 34: 'AB', 35: 'DB', 36: 'CC', 38: 'B@', 39: 'DD', 41: 'C@', 43: 'D@', 44: 'B@', 46: '@B', 47: '@D'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "semilla = [chr(i+64) for i in range(5)]\n",
+    "letras = {random.randint(1,50):random.choice(semilla) + random.choice(semilla) for i in range(50)}\n",
+    "letras_ordenadas = dict(sorted(letras.items(), key=lambda x: x[0], reverse=False))\n",
+    "print(letras_ordenadas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[39]\n",
+      "[7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([key for key, value in letras_ordenadas.items() if value == max(letras_ordenadas.values())])\n",
+    "print([key for key, value in letras_ordenadas.items() if value == min(letras_ordenadas.values())])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> OPERADOR TERNARIO VS OPERADOR LOGICO</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a,b = 2, 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a if a>b else b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a>b and b or a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a<b and b or a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a>b and a or 1 and True and b-b and b*2 or ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a>b and a or 1 and True and a-b and b*2 or ''"
+   ]
   }
  ],
  "metadata": {
