Adicionadas Operaciones_y_metodos_con_Listas

--- a/Python/Notebooks/Operaciones_y_metodos_con_Listas.ipynb
+++ b/Python/Notebooks/Operaciones_y_metodos_con_Listas.ipynb
@@ -33,7 +33,7 @@
     {
      "data": {
       "text/plain": [
-       "['<', '=', '=', '<', '?', '<', '@', '?', '=', 'E']"
+       "['<', '=', '>', '=', '<', 'A', '?', 'B', '?', '?']"
       ]
      },
      "execution_count": 2,
@@ -1130,7 +1130,7 @@
     {
      "data": {
       "text/plain": [
-       "(1896160736640, 1896160731072, 1896160548864, 1896160548864)"
+       "(2998949359296, 2998948991936, 2998949293248, 2998949293248)"
       ]
      },
      "execution_count": 41,
@@ -1167,7 +1167,7 @@
     {
      "data": {
       "text/plain": [
-       "(1896160736640, 1896160731072, 1896159988608, 1896160548864)"
+       "(2998949359296, 2998948991936, 2998949079872, 2998949293248)"
       ]
      },
      "execution_count": 43,
@@ -1395,23 +1395,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> COMPREHENSION LIST</center>\n",
+    "# <center> LIST COMPREHENSION</center>\n",
     "## <center> LISTAS, TUPLAS, CONJUNTOS, DICCIONARIOS, CADENAS, GENERADORES</center>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1420,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1452,7 @@
        "[0, 2, 4, 6, 8]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1476,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1492,7 +1485,7 @@
        "[0, 1, 2, 9, 4, 25, 6, 49, 8, 81]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1520,7 @@
        "(6, 8)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1554,7 @@
        "{-1, 0, True, 3, 6, 9, 10, 20}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1598,10 +1591,10 @@
     {
      "data": {
       "text/plain": [
-       "<generator object <genexpr> at 0x000001B97BFCE3B0>"
+       "<generator object <genexpr> at 0x000002BA3F4DE420>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1618,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1627,7 @@
        "'@ABCDEFGHIJKLMNOPQRSTUVWXYZ'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,14 +1643,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{105: 5, 109: 3, 127: 3, 134: 2, 135: 4, 137: 7, 138: 2, 140: 10, 142: 4, 148: 9, 163: 1, 166: 4, 167: 4, 170: 4, 171: 4, 174: 2, 176: 10, 177: 2, 180: 7, 191: 5, 192: 10, 196: 9, 197: 5}\n"
+      "{101: 3, 107: 9, 113: 9, 114: 10, 120: 5, 121: 7, 125: 7, 132: 6, 139: 9, 143: 10, 144: 8, 152: 10, 155: 2, 158: 2, 160: 2, 161: 1, 162: 2, 163: 2, 173: 6, 175: 10, 177: 5, 178: 7, 182: 5, 184: 9, 196: 7, 197: 1, 198: 1}\n"
      ]
     }
    ],
@@ -1669,25 +1662,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[176, 140, 192]\n",
-      "[163]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print([key for key, value in numeros.items() if value == max(numeros.values())])\n",
-    "print([key for key, value in numeros.items() if value == min(numeros.values())])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 59,
    "metadata": {},
    "outputs": [
@@ -1695,7 +1669,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{3: '@A', 4: 'CA', 5: 'BA', 6: 'AB', 7: '@C', 8: 'D@', 9: '@C', 10: 'D@', 12: '@B', 13: 'BC', 14: 'AC', 15: 'DA', 16: 'BA', 17: 'C@', 18: '@C', 20: '@A', 23: 'DB', 24: 'DA', 26: 'CD', 27: 'DC', 30: '@@', 31: 'BC', 32: 'CC', 33: 'AD', 34: 'AB', 38: 'CC', 40: 'CC', 41: 'BB', 42: 'DD', 45: 'D@', 46: '@D', 47: 'BD', 48: 'AA', 49: 'BC'}\n"
+      "[114, 143, 152, 175]\n",
+      "[161, 197, 198]\n"
+     ]
+    }
+   ],
+   "source": [
+    "maximo = [key for key, value in numeros.items() if value == max(numeros.values())]\n",
+    "maximo.sort()\n",
+    "print(maximo)\n",
+    "\n",
+    "minimo = [key for key, value in numeros.items() if value == min(numeros.values())]\n",
+    "minimo.sort()\n",
+    "print(minimo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: '@B', 2: 'CB', 4: 'BA', 6: 'CB', 7: '@D', 8: '@B', 10: 'DC', 11: 'CA', 12: 'DC', 14: 'AD', 18: 'DD', 19: '@@', 20: '@@', 28: 'C@', 29: 'DB', 30: 'BA', 31: 'DD', 32: 'BD', 33: '@@', 34: 'CD', 36: '@A', 37: 'AA', 38: 'C@', 39: '@B', 40: 'BB', 41: '@C', 42: 'BA', 43: 'AB', 45: '@@', 46: 'BC', 48: 'AC'}\n"
      ]
     }
    ],
@@ -1708,21 +1706,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[42]\n",
-      "[30]\n"
+      "[18, 31]\n",
+      "[19, 20, 33, 45]\n"
      ]
     }
    ],
    "source": [
-    "print([key for key, value in letras_ordenadas.items() if value == max(letras_ordenadas.values())])\n",
-    "print([key for key, value in letras_ordenadas.items() if value == min(letras_ordenadas.values())])"
+    "maximo = [key for key, value in letras_ordenadas.items() if value == max(letras_ordenadas.values())]\n",
+    "maximo.sort()\n",
+    "print(maximo)\n",
+    "\n",
+    "minimo = [key for key, value in letras_ordenadas.items() if value == min(letras_ordenadas.values())]\n",
+    "minimo.sort()\n",
+    "print(minimo)"
    ]
   },
   {
@@ -1734,31 +1737,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
     "a,b = 2, 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a if a>b else b"
    ]
   },
   {
@@ -1769,7 +1752,7 @@
     {
      "data": {
       "text/plain": [
-       "()"
+       "10"
       ]
      },
      "execution_count": 63,
@@ -1778,7 +1761,7 @@
     }
    ],
    "source": [
-    "0 or False or None or [] or {} or ()"
+    "a if a>b else b"
    ]
   },
   {
@@ -1789,7 +1772,7 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "()"
       ]
      },
      "execution_count": 64,
@@ -1798,7 +1781,7 @@
     }
    ],
    "source": [
-    "a>b and a or b"
+    "0 or False or None or '' or [] or {} or ()"
    ]
   },
   {
@@ -1809,7 +1792,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "False"
       ]
      },
      "execution_count": 65,
@@ -1818,7 +1801,7 @@
     }
    ],
    "source": [
-    "a<b and a or b"
+    "a>b and a"
    ]
   },
   {
@@ -1829,7 +1812,7 @@
     {
      "data": {
       "text/plain": [
-       "''"
+       "10"
       ]
      },
      "execution_count": 66,
@@ -1838,8 +1821,7 @@
     }
    ],
    "source": [
-    "# 0, False, None, '', [], {}, ()\n",
-    "a>b and b or 1 and True and b-b and b*2 or ''"
+    "a>b and a or b"
    ]
   },
   {
@@ -1850,10 +1832,50 @@
     {
      "data": {
       "text/plain": [
-       "20"
+       "2"
       ]
      },
      "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a<b and a or b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a>b and b or 1 and True and b-b and b*2 or ''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
